--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,16 +14,18 @@ dependencies:
   cached_network_image: ^3.0.0
   carousel_slider: ^4.0.0
   change_app_package_name: ^1.0.0
+  cloud_firestore: ^3.1.7
   cupertino_icons: ^1.0.2
   curved_navigation_bar: ^1.0.1
   dio: ^4.0.0
   firebase_core: ^1.12.0
-  cloud_firestore: ^3.1.7
   flutter_cache_manager: ^3.3.0
   flutter_scroll_to_top: ^2.1.1
+  flutter_share: ^2.0.0
   font_awesome_flutter: ^9.2.0
   getwidget: ^2.0.4
   google_fonts: ^2.1.0
+  google_mobile_ads: ^1.1.0
   http: ^0.13.1
   image_gallery_saver: ^1.6.9
   permission_handler: ^7.1.0
@@ -45,6 +47,10 @@ flutter:
     - images/search.png
     - images/User_avatar.png
     - images/appbar_logo.png
+    - images/mirage.jpg
+    - images/mirage2.jpg
+    - images/mirage3.jpg
+    - images/mirage4.jpg
 
   fonts:
     - family: DancingScript
