--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  async_wallpaper: ^1.0.1
   cached_network_image: ^3.0.0
   carousel_slider: ^4.0.0
   change_app_package_name: ^1.0.0
@@ -28,11 +29,11 @@ dependencies:
   google_mobile_ads: ^1.1.0
   http: ^0.13.1
   image_gallery_saver: ^1.6.9
+  onesignal_flutter: ^3.3.0
   permission_handler: ^7.1.0
   sizer: ^2.0.13
   splash_screen_view: ^3.0.0
   url_launcher: any
-  wallpaper_manager: ^1.0.10
 
 dev_dependencies:
   flutter_test:
